Enable Global Search on preview

--- a/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
+++ b/charts/sscs-tribunals-api/values.ccd.preview.template.yaml
@@ -125,6 +125,7 @@ xui-webapp:
       SERVICES_ROLE_ASSIGNMENT_MAPPING_API: http://${SERVICE_NAME}-am-org-role-mapping-service
       JURISDICTIONS: SSCS
       WA_SUPPORTED_JURISDICTIONS: SSCS
+      GLOBAL_SEARCH_SERVICES: IA,CIVIL,PRIVATELAW,PUBLICLAW,SCSS,ST_CIC,EMPLOYMENT
       LAUNCH_DARKLY_CLIENT_ID: 5de6610b23ce5408280f2268
       FEATURE_WORKALLOCATION_ENABLED: true
       FEATURE_REDIS_ENABLED: false
