--- a/build.gradle
+++ b/build.gradle
@@ -330,6 +330,10 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'auth-checker-lib', version: '2.1.5'
     implementation group: 'com.github.hmcts', name: 'properties-volume-spring-boot-starter', version: '0.1.1'
 
+    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.12'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.12'
+
     implementation group: 'com.github.hmcts', name: 'java-logging', version: '6.0.1'
     implementation group: 'com.github.hmcts', name: 'doc-assembly-client', version: '1.07'
     implementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'
