SSCSCI-39: add sscs-cor-frontend dependency

--- a/charts/sscs-tribunals-api/Chart.yaml
+++ b/charts/sscs-tribunals-api/Chart.yaml
@@ -39,6 +39,10 @@ dependencies:
     version: 0.2.38
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
     condition: sscs-tribunals-frontend.enabled
+  - name: sscs-cor-frontend
+    version: 0.1.37
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    condition: sscs-cor-frontend.enabled
   - name: redis
     version: 17.11.8
     repository: "https://charts.bitnami.com/bitnami"
