--- a/charts/sscs-tribunals-api/values.yaml
+++ b/charts/sscs-tribunals-api/values.yaml
@@ -89,6 +89,8 @@ sscs-ccd-callback-orchestrator:
   enabled: false
 sscs-tribunals-frontend:
   enabled: false
+sscs-cor-frontend:
+  enabled: false
 redis:
   enabled: false
 ccd:
