--- a/build.gradle
+++ b/build.gradle
@@ -339,7 +339,7 @@ dependencies {
     implementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.0'
     implementation group: 'com.github.hmcts', name: 'cmc-pdf-service-client', version: '7.0.1'
     
-    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '2ca3300'
+    implementation group: 'com.github.hmcts', name: 'sscs-common', version: '236c951'
     implementation group: 'com.github.hmcts', name: 'sscs-pdf-email-common', version: '1.8.10'
 
     implementation group: 'com.azure', name: 'azure-core', version: '1.42.0'
@@ -544,7 +544,7 @@ bootWithCCD {
 
     //---Debug-----
     //Uncomment to launch with debug
-    jvmArgs = ['-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5006']
+    //jvmArgs = ['-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5006']
 
     //---Extra ccd loging----
     //Uncomment for ccd callback logging
