Tribs: add in template SSCS-12091

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -68,10 +68,12 @@ docmosis.uri=${DOCMOSIS_SERVICE_BASE_URL:https://docmosis.aat.platform.hmcts.net
 
 documents.english.CORRECTION_GRANTED=TB-SCS-GNO-ENG-corrected-decision-notice.docx
 documents.english.DIRECTION_ISSUED=TB-SCS-GNO-ENG-directions-notice.docx
+documents.english.SOR_WRITE=TB-SCS-GNO-ENG-final-decision-notice.docx
 documents.english.DECISION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.english.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
 documents.welsh.CORRECTION_GRANTED=TB-SCS-GNO-ENG-corrected-decision-notice.docx
 documents.welsh.DIRECTION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
+documents.welsh.SOR_WRITE=TB-SCS-GNO-ENG-final-decision-notice.docx
 documents.welsh.DECISION_ISSUED=TB-SCS-GNO-ENG-draft-decision-notice.docx
 documents.welsh.ISSUE_FINAL_DECISION=TB-SCS-GNO-ENG-final-decision-notice.docx
 
@@ -130,10 +132,10 @@ feature.sscs2.enabled: ${SSCS2_FEATURE:false}
 feature.work-allocation.enabled: ${WORK_ALLOCATION_FEATURE:false}
 feature.gaps-switchover.enabled: ${GAPS_SWITCHOVER_FEATURE:false}
 feature.snl.enabled: ${SCHEDULE_LISTING_FEATURE:true}
-feature.snl.adjournment.enabled: ${ADJOURNMENT_FEATURE:false}
+feature.snl.adjournment.enabled: ${ADJOURNMENT_FEATURE:true}
 feature.case-access-management.enabled: ${CASE_ACCESS_MANAGEMENT_FEATURE:false}
-feature.postHearings.enabled: ${POST_HEARINGS_FEATURE:false}
-feature.postHearingsB.enabled: ${POST_HEARINGS_B_FEATURE:false}
+feature.postHearings.enabled: ${POST_HEARINGS_FEATURE:true}
+feature.postHearingsB.enabled: ${POST_HEARINGS_B_FEATURE:true}
 
 case_document_am.url=${CASE_DOCUMENT_AM_URL:http://localhost:4455}
 
